Fixed signup gap and added footer.

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
 }
 
 #video {
-    padding-bottom: 60px;
+    padding-bottom: 30px;
 }
 
 .screenshot {
